@@ -1,15 +1,11 @@
 module God
   class Process
-    WRITES_PID = [:start, :restart]
-    
-    attr_accessor :name, :uid, :gid, :start, :stop, :restart, :pid_file
+    attr_accessor :name, :uid, :gid, :start, :stop, :restart, :pidfile
     
     def initialize(options={})
       options.each do |k,v|
         send("#{k}=", v)
       end
-      
-      @tracking_pid = false
     end
     
     def start!
@@ -29,31 +25,18 @@ module God
       if command.kind_of?(String)
         # string command
         # fork/exec to setuid/gid
-        pid = fork {
+        fork {
           Process::Sys.setgid(Etc.getgrnam(self.gid).gid) if self.gid
           Process::Sys.setuid(Etc.getpwnam(self.uid).uid) if self.uid
           $0 = command
           exec command
         }
-        
-        if @tracking_pid or (self.pid_file.nil? and WRITES_PID.include?(action))
-          File.open(default_pid_file, 'w') do |f|
-            f.write pid
-          end
-          
-          @tracking_pid = true
-          self.pid_file = default_pid_file
-        end
       elsif command.kind_of?(Proc)
         # lambda command
         command.call
       else
         raise NotImplementedError
       end
-    end
-    
-    def default_pid_file
-      File.join(God.pid_file_directory, "#{self.name}.pid")
     end
   end
 end
