@@ -16,8 +16,7 @@ module God
     
     extend Forwardable
     def_delegators :@process, :name, :uid, :gid, :start, :stop, :restart,
-                              :name=, :uid=, :gid=, :start=, :stop=, :restart=,
-                              :pid_file, :pid_file=
+                              :name=, :uid=, :gid=, :start=, :stop=, :restart=
     
     # api
     attr_accessor :behaviors, :metrics
